@@ -1,3 +1,8 @@
+2013-01-18  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* libdecnumber/decNumber.c (decSetSubnormal): Remove unused variable.
+	* strtod32.c (strtod32): Likewise.
+
 2013-01-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
 	* sysdeps/soft-dfp/dpd/numdigits.h (getexp): Simplify code and fix
